Removed margin from Navbar and prevented textwrap.

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,11 +10,13 @@
     display: flex;
     width: 100%;
     background-color: #08141e;
+    /* min-width: 400px; */
 }
 
 .navbar {
     display: inline-flex;
     list-style-type: none;
+    padding-left: 0;
 }
 
 .nav-item {
@@ -50,11 +52,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    white-space: nowrap;
 }
 
 .nav-item-username {
     align-self: center;
-    margin-left: 30px;
+    /* margin-left: 30px; */
     list-style-type: none;
     cursor: default;
     color: white;
